Bug 432529 - Left/Bottom padding of identity contextual dialog is a bit too wide; r=gavin
UltraBlame original commit: 237f8897fa8a95cdfd9df97f5914a58696049a04

--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -518,6 +518,47 @@ identity
 -
 popup
 -
+more
+-
+info
+-
+button
+:
+-
+moz
+-
+system
+-
+metric
+(
+windows
+-
+default
+-
+theme
+)
+{
+margin
+-
+bottom
+:
+0
+;
+-
+moz
+-
+margin
+-
+end
+:
+0
+;
+}
+#
+identity
+-
+popup
+-
 container
 :
 -
@@ -551,6 +592,12 @@ padding
 end
 :
 6px
+;
+padding
+-
+bottom
+:
+9px
 ;
 }
 #
